fixed navbar issue z-index

--- a/css/style.css
+++ b/css/style.css
@@ -127,6 +127,7 @@ body {
     justify-content: center;
     background-color: transparent;
     position: fixed;
+    z-index: 10000;
 }
 
 .navbar-wrapper {
